Correct color contrast

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color:  #3D3D3D; /*rgba(255, 255, 255, 0)*/
 }
 
 .d-bloc .a-btn:hover,
@@ -262,6 +262,10 @@ a:hover {
 .l-bloc .btn-wire:hover {
     color: rgba(0, 0, 0, .7);
     border-color: rgba(0, 0, 0, .3);
+}
+
+.grey {
+    color:  #3D3D3D; /*rgba(255, 255, 255, 0)*/
 }
 
 .voffset {
@@ -651,7 +655,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #3d3d3d!important;
 }
 
 .container {
@@ -777,15 +781,20 @@ h4 {
 .tc-white {
     color: #F3976C!important;
 }
+.tc-white-change {
+    color: #FFBA8B!important;
+}
+
+
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #575757!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #575757!important;
 }
 
 .ltc-white {
